<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fonblure2"
    android:fontFamily="@font/tenor_sans"
    tools:context=".mvp.view.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="385dp"
        android:layout_height="377dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrationOnMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@drawable/oneworday" />

    <Button
        android:id="@+id/buttonEntryOnMain"
        android:layout_width="294dp"
        android:layout_height="69dp"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/entry"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:backgroundTint="@color/black"
        app:cornerRadius="@android:dimen/notification_large_icon_height"
        app:iconTint="@color/myfon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/buttonRegistrationOnMain"
        android:layout_width="291dp"
        android:layout_height="67dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/Registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:backgroundTint="@color/mypurpl"
        app:cornerRadius="@android:dimen/notification_large_icon_height"
        app:iconTint="@color/myfon"
        app:layout_constraintBottom_toTopOf="@+id/buttonEntryOnMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>