<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ffon">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/TextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/oneworday" />

    <Button
        android:id="@+id/buttonEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/entry"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/myfon"
        app:backgroundTint="@color/mypurpl"
        app:cornerRadius="@android:dimen/notification_large_icon_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/TextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/tenor_sans"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/myfon"
        android:textColorHighlight="@color/mypurpl"
        android:textColorHint="@color/myfon"
        android:textColorLink="@color/mypurpl"
        android:textCursorDrawable="@color/mypurpl"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/TextPassword"
        app:layout_constraintEnd_toEndOf="@+id/TextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TextPassword"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:backgroundTint="@color/purple_light"
        tools:targetApi="lollipop"/>

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/tenor_sans"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/myfon"
        android:textColorHighlight="@color/mypurpl"
        android:textColorHint="@color/myfon"
        android:textColorLink="@color/mypurpl"
        android:textCursorDrawable="@color/mypurpl"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967"
        android:backgroundTint="@color/purple_light"
        tools:targetApi="lollipop"/>

    <TextView
        android:id="@+id/error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/tenor_sans"
        android:gravity="center"
        android:textColor="#CD2525"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEntry"
        app:layout_constraintEnd_toEndOf="@+id/TextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>